--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 body > div {
-    height: 95%;
+    height: 98vh;
 }
 
 /* ------------------------------ */
@@ -51,6 +51,10 @@ body > div {
     float: left;
     border-right: 2px dotted black;
     width: 30%;
+}
+
+#toc-header {
+    text-align: center;
 }
 
 ul {
@@ -89,7 +93,11 @@ h1, h2 {
 
 footer {
     clear:both;
-    height: 5%;
+    height: 2%;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
 
 #back-to-top {
